--- a/.env.example
+++ b/.env.example
@@ -23,9 +23,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=ordermanagement
+# DB_DATABASE=order_managment
 # DB_USERNAME=root
-# DB_PASSWORD=
+# DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
